Changed view on mobile. Corrected issues with address bar in mobile. Slight change in the menu in desktop view.

--- a/css/css.less
+++ b/css/css.less
@@ -67,7 +67,7 @@ section {
 
 .wrapper {
     width: 36em;
-    height: 15em;
+    height: 16em;
     position: absolute;
     top: 0;
     left: 0;
@@ -84,7 +84,7 @@ section {
     float: left;
     display: inline-block;
     padding: 0 2.5em;
-    margin-top: -3.7em;
+    margin-top: -0.6em;
     width: 15em;
     height: 3em;
 
@@ -214,7 +214,8 @@ h1 {
     overflow: auto;
 
     &::-webkit-scrollbar {  
-        width: 10px;  
+        width: 8px; 
+        border-radius: 10px;
     }  
 
     &::-webkit-scrollbar-track {  
@@ -222,11 +223,11 @@ h1 {
     }  
 
     &::-webkit-scrollbar-thumb {  
-        background-color: #111;  
+        background-color: darken(@yellow, 40%);  
     }  
 
     &::-webkit-scrollbar-thumb:hover {  
-        background-color: #333;  
+        background-color: darken(@yellow, 40%);  
     }  
 
     & > div {
@@ -319,9 +320,9 @@ a {
     text-decoration: none;
     transition: all .2s lisnear;
     -webkit-transition: all .2s linear;
-    -moz-transition: all .2s linear; 
+    -moz-transition: .2s linear; 
     cursor: pointer;
-    margin-bottom: 1.7em;
+    margin-bottom: 1.8em;
 
     &:hover {
         background: #111;
@@ -384,12 +385,8 @@ a {
         font-size: 15px;
     }
 
-    .menu {
-        margin-top: -0.5em;
-    }
-
     .info {
-        width: 79%;
+        width: 80%;
         height: 80%;
     }
 
@@ -403,20 +400,72 @@ a {
     }
 
     .wrapper {
-        width: 16em;
-        height: 36em;
+        width: 90%;
+        height: 29em;
     }
 
     h1 {
         display: block;
-        margin-bottom: 0.2em;
+        margin: 0 auto 0.3em auto;
+        float: none;
+        text-align: center;
+        width: 3em;
+        height: 3em;
+        line-height: 3.2em;
+        font-size: 4em;
+        display: block;
     }
 
     .menu {
+        width: 100%;
+        margin-top: -0.5em;
         display: block;
         float: none;
-        height: auto;
-        padding: 1em;
-        margin-top: 0;
+        height: 65%;
+        padding: 0;
+        text-align: center;
+
+        div {
+            padding: 0.6em;
+            font-size: 0.9em;
+            margin-bottom: 0.5em;
+
+            span {
+                background: #111;
+                color: #fff;
+                letter-spacing: 0;
+                display: inline-block;
+                min-width: 2em;
+                min-height: 2em;
+                line-height: 2em;
+            }
+        }
+
+        a {
+            height: 3em;
+            font-size: 0.9em;
+            line-height: 3em;
+
+            &:hover {
+                background: #111;
+                color: #fff;
+            }
+
+            &.fb, &.tw, &.gp {
+                display: none !important;
+                width: 20%; 
+                display: inline-block;
+            }
+
+            &.tw {
+                margin: 0 2%;
+            }
+        }
+
+        a.main_btn {
+            margin-bottom: 0.6em;
+            width: auto;
+            display: block;
+        }
     }
 }
